--- a/app/src/main/res/layout/item_jogo.xml
+++ b/app/src/main/res/layout/item_jogo.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/game_item_view"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:tint="#CECDD1"
@@ -29,20 +29,20 @@
         android:layout_marginEnd="8dp"
         android:text="7 Wonders"
         android:textColor="#FAFAFA"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/game_item_view"
-        app:layout_constraintEnd_toStartOf="@+id/txt_game_item2"
+        app:layout_constraintEnd_toStartOf="@+id/nota_total_main"
         app:layout_constraintStart_toStartOf="@+id/game_item_view"
         app:layout_constraintTop_toTopOf="@+id/game_item_view" />
 
     <TextView
-        android:id="@+id/txt_game_item2"
+        android:id="@+id/nota_total_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="7 Wonders"
+        android:text="10"
         android:textColor="#FAFAFA"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/game_item_view"
         app:layout_constraintEnd_toEndOf="@+id/game_item_view"
         app:layout_constraintTop_toTopOf="@+id/game_item_view" />
