--- a/app/src/main/res/layout/historico_jogo.xml
+++ b/app/src/main/res/layout/historico_jogo.xml
@@ -40,11 +40,12 @@
         android:id="@+id/txt_nota_geral_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Cada jogo dura em média "
         android:textColor="#69748C"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/txt_nota_geral_2"
+        app:layout_constraintStart_toEndOf="@+id/nota_total_txt"
         app:layout_constraintTop_toBottomOf="@+id/jogatinas" />
 
     <TextView
